[package]
name = "x64-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
region = "3.0.0"
anyhow = "1.0.56"
num_enum = "0.5.7"
memoffset = "0.6"

[dependencies.iced-x86]
version = "1.17.0"
features = ["code_asm"]

[profile.release]
lto = true
